# rankor

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  settings.py  setup.py
rankor/: __init__.py  error_handlers.py  errors.py  json.py  pagination.py  ranked_list_endpoints.py  routing_rules.py  score_calculation.py  thing_endpoints.py  utils.py
rankor/endpoints/: __init__.py  fights.py  ranked_lists.py  ranked_things.py  things.py
rankor/models/: __init__.py  fight.py  jsonable_model.py  mongo_model.py  pyobjectid.py  ranked_list.py  ranked_thing.py  score.py  thing.py  thing_score.py
src/: models.py
src/mov_vs_mov_reference/: compute_VS_Score.py  get_list_of_popular_movies.py  googlesearch.py  keep_trueskill_updated.sh  movie_search.py  populateMovieData.py  put_movies_in_with_no_rating.py  retrieve_movie_from_the_web.py
src/rankor/: __init__.py  database.py  error_handlers.py  errors.py  json.py  matchmaking.py  models.py  pagination.py  pyobjectid.py  ranked_list_endpoints.py  routing_rules.py  score_calculation.py  server.py  thing_endpoints.py  utils.py  wsgi.py
src/rankor/config/: __init__.py  rankor_config.toml
src/rankor/endpoints/: fights.py  ranked_lists.py  ranked_things.py  things.py
src/rankor/models/: __init__.py  fight.py  jsonable_model.py  mongo_model.py  pyobjectid.py  ranked_list.py  score.py  thing.py  thing_collection.py  thing_score.py
src/server/: __init__.py  image.py  query.py  similarity.py  tag.py  tsne.py  utils.py
tests/: __init__.py  conftest.py  run_all_tests.py
tests/endpoints/: test_things.py
tests/endpoints/ranked_lists/: test_deleting_ranked_lists.py  test_retrieving_ranked_lists.py
tests/endpoints/ranked_things/: test_creating_ranked_lists.py  test_retrieving_ranked_lists.py
tests/endpoints/things/: test_creating_things.py  test_deleting_things.py  test_editing_things.py  test_listing_things.py  test_retrieving_things.py
tests/models/: __init__.py  run_all_tests.py  test_thing.py  thing_tests.py
tests/server/: test_server.py
