[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "rankor"
version = "0.1.1"
description = "A lightweight API for comparing things to rank them"
readme = "README.md"
authors = [{ name = "Irmak Sirer", email = "irmak.sirer@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: AGPL V3 License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["ranking", "rankedlist", "tierlist", 
            "pairwise", "comparison", "elo", "glicko"]

dependencies = [
        "Flask == 2.1.2",
        "Flask-PyMongo==2.3.0",
        "pymongo[srv] == 4.1.1",
        "gunicorn == 20.1.0",
        "pydantic == 1.9.1",
        "trueskill == 0.4.5",
        "python-dotenv == 0.20.0",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest == 7.4.0"]




